# samba4-ad

./: .audit-ci.json  .editorconfig  .env.example  .gitignore  .markdownlinkcheck.json  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  DESIGN-INTEGRATION.md  Dockerfile  GOVERNANCE.md  INCIDENT-RESPONSE.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: _errors.py  alerts.py  auth.py  computers.py  dashboard.py  dns.py  domain.py  gpo.py  groups.py  health.py  iam.py  logs.py  ou.py  policies.py  router.py  search.py  self_service.py  settings.py  setup.py  stats.py  users.py
backend/src/core/: __init__.py  access_intelligence.py  api_keys.py  audit.py  audit_middleware.py  auth.py  config.py  deps.py  kerberos.py  mfa.py  pbac.py  pbac_middleware.py
backend/src/models/: __init__.py  auth.py  common.py  computers.py  domain.py  domain_info.py  gpo.py  groups.py  health.py  ou.py  setup.py  stats.py  users.py
backend/src/services/: __init__.py  directory.py  ldap3_backend.py  mock.py  provisioning.py  samba_logs.py  samba_tool.py
backend/tests/: conftest.py  test_audit.py  test_contract.py  test_contract_iam.py  test_domain.py  test_mfa.py  test_pbac.py  test_services.py
backend/tests/api/: test_auth.py  test_iam.py  test_logs_dns.py  test_mfa_api.py  test_routes.py
docs/: design-brief.md  iam.md  plan.html
docs/adr/: 0001-monorepo-structure.md  0002-fastapi-ldap3-backend.md  0003-incremental-development-strategy.md  README.md
docs/tracking/: 01-dashboard.md  02-users.md  03-groups.md  04-ou.md  05-domain-join.md  06-gpo.md  07-settings.md
docs/user-guide/: user-guide-en.md  user-guide-ja.md  user-guide-ko.md  user-guide-zh.md
frontend/: i18next-parser.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/scripts/: i18n-check.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: components.test.tsx  empty-state.test.tsx  iam.test.tsx  login.test.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/ui/: DataTable.tsx  Drawer.tsx  EmptyState.tsx  LanguageSwitcher.tsx  ManualModal.tsx  Pagination.tsx  StatusBadge.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  ko.json
frontend/src/pages/: Computers.tsx  DNS.tsx  Dashboard.tsx  GPOs.tsx  Groups.tsx  IAM.tsx  Login.tsx  Logs.tsx  OUs.tsx  Policies.tsx  Settings.tsx  SetupWizard.tsx  Users.tsx
frontend/src/types/: api.ts
policies/: assignments.json
policies/system/: auditor.json  super-admin.json  user-admin.json  viewer.json
previews/: 00-setup-wizard.html  01-dashboard.html  02-users.html  03-groups.html  04-ou.html  05-domain-join.html  06-gpo.html  07-settings.html
scripts/: ci-local.sh  health-check.py  samba_admin.py  setup-dev.sh
