# Samba 4 AD Manager — project-wide Python configuration
# ruff, mypy, pytest, coverage settings unified

[project]
name = "samba4-ad-manager"
version = "0.1.0"
description = "Web-based admin portal for Samba 4 Active Directory Domain Controller"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "ldap3>=2.9",
    "psutil>=5.9",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",          # For FastAPI TestClient
    "types-PyYAML",
    "types-requests",
]

# ============================================
# Ruff — linter + formatter (replaces flake8 + black)
# ============================================
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backend/src", "scripts"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "PERF",  # perflint
    "S",     # flake8-bandit (security)
    "C4",    # flake8-comprehensions
    "ERA",   # eradicate (remove commented-out code)
]
# NOTE: "TCH"/"TC" (flake8-type-checking) intentionally NOT selected — it
# conflicts with Pydantic, which needs model classes imported at runtime to
# build validators. Moving them under ``if TYPE_CHECKING`` breaks the schemas.
ignore = [
    "E501",   # line too long (handled by ruff format)
    "S101",   # assert allowed (in tests)
    "S603",   # subprocess allowed (samba-tool wrapper)
    "S607",   # partial executable path allowed (systemctl, pgrep, samba)
    "S106",   # hardcoded password in config (test fixtures)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101", "S105", "D"]
"scripts/**" = ["T201", "S607"]
"**/__init__.py" = ["F401"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/Path/Field/Body and Pydantic's Field are designed to
# be used as default-argument values (they're immutable factories, not the
# anti-pattern B008 targets).
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.Header",
    "pydantic.Field",
    "Depends",
    "Query",
    "Path",
    "Body",
    "Form",
    "Field",
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

# ============================================
# Mypy — strict type checking
# ============================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
files = ["backend/src"]

# External libraries without stubs
[[tool.mypy.overrides]]
module = [
    "ldap3.*",
    "ldaptree.*",
]
ignore_missing_imports = true

# Tests are less strict
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================
# Pytest
# ============================================
[tool.pytest.ini_options]
testpaths = ["backend/tests", "scripts"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --tb=short
    --strict-markers
    -p no:cacheprovider
"""
markers = [
    "unit: Unit tests (fast, mocked LDAP)",
    "integration: Integration tests (needs Samba 4 VM)",
    "e2e: End-to-end tests (needs running domain)",
    "slow: Tests taking > 10 seconds",
    "requires_samba: Tests requiring Samba 4 AD DC",
    "requires_ldap: Tests requiring live LDAP connection",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:distutils",
    "ignore::PendingDeprecationWarning",
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
    "ignore:Using `httpx` with `starlette.testclient`",
]

# ============================================
# Coverage
# ============================================
[tool.coverage.run]
source = ["backend/src", "src"]
omit = [
    "backend/tests/*",
    "**/__pycache__/*",
    "*/migrations/*",
    # Production-only backends — exercised against a live Samba 4 AD DC
    # in integration/e2e tests, not in T0 unit tests.
    "*/ldap3_backend.py",
    "*/samba_tool.py",
    "*/provisioning.py",
    "*/samba_logs.py",
    "*/audit_middleware.py",
    "*/pbac_middleware.py",
    "*/access_intelligence.py",
    "*/mfa.py",
]
parallel = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]

# ============================================
# Bandit — security linting
# ============================================
[tool.bandit]
exclude_dirs = ["backend/tests", "scripts"]
skips = ["B101"]
