# Samba 4 AD Manager — Backend package
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "samba4-ad-backend"
version = "0.1.0"
description = "FastAPI REST API for Samba 4 AD Manager"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "ldap3>=2.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.0",
    "psutil>=5.9",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# The root ../pyproject.toml owns ruff/mypy/pytest config; this file only
# declares backend dependencies so `pip install -e backend[dev]` works.
